# iot-plant

./: .gitignore  README.md  README.old.md  package-lock.json  package.json
backend_rust/: Cargo.toml  output.txt
backend_rust/prisma/: schema.prisma
backend_rust/prisma-cli/: Cargo.toml
backend_rust/src/: FOLDERY.js  body.txt  handler.rs  jwt_auth.rs  main copy.rs  main.rs  main2.rs  model.rs  response.rs  router.rs  scrape.rs
backend_rust/src/route/: health.rs  mod.rs  plants.rs  user.rs
public/: index.html
scraper/: body.js  output.txt  package-lock.json  package.json  response.html  scrape.js  scrape.py  second_table_content.html  table_content.html
src/: App.js  index.js  theme.js
src/views/: Layout.js  MyPlants.js  NewPlant.js  Page404.js  Plant copy.js  Plant.js  PlantHistory.js  Plants.js  SampleHistory.js  SignIn.js  SignUp.js
