[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]

[dependencies]
axum = { version = "0.6.17", features = ["macros"] }
eyre = "0.6.8"
tokio = { version = "1.28.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
serde = "1.0.160"
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = ["v4"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
axum-extra = { version = "0.7.2", features = ["cookie"] }
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
argon2 = "0.5.0"
time = "0.3.20"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = "0.11.22"
select = "0.6.0"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql"]
